intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
body,
html {
  height: 100%;
  margin: 0;
}

.container {
  text-align: center;
  height: 100%;
  padding: 16px;
  box-sizing: border-box;
}

.container div {
  padding: 15px;
  font-size: 32px;
  font-family: Helvetica;
  font-weight: bold;
  color: white;
  border-radius: 15px;
}

.header {
  background-color: #006157;
}

.sidebar {
  background-color: #005B94;
}

.nav {
  background-color: #642cde;
}

.article {
  background-color: #7E1DC3;
}

.footer {
  background-color: #393f4d;
}

.article p {
  font-size: 18px;
  font-family: sans-serif;
  color: white;
  text-align: left;
}

.container {
  display: grid;
  grid-template-rows: repeat(10, 10vh);
  gap: 1vh;
}

